# splatset-gen

./: .gitignore  PLAN.md  README.md  pyproject.toml
assets/: .gitignore
configs/: adversial.yaml  cache_verify.yaml  default.yaml  dev_fast.yaml  high_quality.yaml  hyper-adversial.yaml  production.yaml
scripts/: generate_dataset.py  measure_generation_memory.py  plot_training_log.py  predict.py  render_debug.py  verify_ply_cache.py
src/: augment.py  background.py  cached_scene.py  camera.py  console.py  event_log.py  export.py  memutil.py  parallel.py  picker.py  ply_cache.py  ply_loader.py  ply_manager.py  sample.py  scene.py
src/render/: __init__.py  projection.py  rasterizer.py  sh.py
tests/: synthetic_gaussians.py  test_augment.py  test_background.py  test_camera.py  test_continue_config.py  test_export_continue.py  test_inference_encode.py  test_mask_occlusion.py  test_picker.py  test_ply_cache.py  test_ply_loader.py  test_sh.py  test_single_object.py  test_train_augment.py  test_train_config.py  test_train_dataset.py  test_train_metrics.py  test_train_resume.py  test_viewer_dataset.py
train/: .gitignore  annotations_simplifier.py  config.py  dataset.py  inference.py  model.py  train.py  training_config.yaml
viewer/: app.py  dataset_index.py
viewer/static/: app.js  style.css
viewer/static/js/: ai-panel.js  canvas.js  constants.js  dataset.js  events.js  interactive.js  layout.js  main.js  nav.js  render.js  shared.js  ui.js  utils.js  zoom.js
viewer/templates/: index.html
