[project]
name = "splat-dataset"
version = "0.1.0"
description = "CPU Gaussian-splat training data generator for click-to-segment models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "numpy",
    "pillow",
    "plyfile",
    "pyyaml",
    "torch",
    "typer",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.uv]
package = false
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
